--- a/lab_1/config/xrd01.cfg
+++ b/lab_1/config/xrd01.cfg
@@ -1,3 +1,4 @@
+
 hostname xrd01
 username cisco
  group root-lr
@@ -14,7 +15,7 @@ grpc
 !
 telemetry model-driven
  destination-group jalapeno
-  address-family ipv4 198.18.128.101 port 32400
+  address-family ipv4 192.168.112.2 port 32400
    encoding self-describing-gpb
    protocol grpc no-tls
   !
@@ -32,6 +33,42 @@ telemetry model-driven
   source-interface MgmtEth0/RP0/CPU0/0
  !
 !
+vrf 1
+ address-family ipv4 unicast
+  import route-target
+   1:1
+  !
+  export route-target
+   1:1
+  !
+ !
+ address-family ipv6 unicast
+  import route-target
+   1:1
+  !
+  export route-target
+   1:1
+  !
+ !
+!
+vrf carrots
+ address-family ipv4 unicast
+  import route-target
+   9:9
+  !
+  export route-target
+   9:9
+  !
+ !
+ address-family ipv6 unicast
+  import route-target
+   9:9
+  !
+  export route-target
+   9:9
+  !
+ !
+!
 call-home
  service active
  contact smart-licensing
@@ -46,16 +83,22 @@ netconf-yang agent
 !
 interface Loopback0
  ipv4 address 10.0.0.1 255.255.255.255
- ipv6 address fc00:0000:1111::1/128
+ ipv6 address fc00:0:1111::1/128
 !
 interface MgmtEth0/RP0/CPU0/0
- description mgt 
- ipv4 address 10.254.254.101 255.255.255.0 
+ description mgt
+ ipv4 address 10.254.254.101 255.255.255.0
 !
 interface GigabitEthernet0/0/0/0
- description to ubuntu client VM
+ description to XRD08
+ vrf 1
  ipv4 address 10.101.1.2 255.255.255.0
- ipv6 address fc00:0:101:1::2/64
+!
+interface GigabitEthernet0/0/0/0.10
+ vrf carrots
+ ipv4 address 10.101.3.2 255.255.255.0
+ ipv6 address fc00:0:101:3::2/64
+ encapsulation dot1q 10
 !
 interface GigabitEthernet0/0/0/1
  description to xrd02
@@ -69,6 +112,14 @@ interface GigabitEthernet0/0/0/2
  ipv4 address 10.1.1.8 255.255.255.254
  ipv6 address 2001:1:1:1::8/127
 !
+interface GigabitEthernet0/0/0/3
+ l2transport
+ !
+!
+route-policy PASS
+  pass
+end-policy
+!
 route-policy drop
   drop
 end-policy
@@ -80,7 +131,6 @@ end-policy
 router static
  address-family ipv4 unicast
   10.101.2.0/24 GigabitEthernet0/0/0/0 10.101.1.1
-  198.18.128.0/21 10.254.254.1
  !
  address-family ipv6 unicast
   fc00:0:101:2::/64 fc00:0:101:1::1
@@ -102,10 +152,13 @@ router isis 100
   metric-style wide
   advertise link attributes
   maximum-paths 32
+  segment-routing srv6
+   locator MyLocator
+   !
   !
  !
  interface Loopback0
-  passive 
+  passive
   address-family ipv4 unicast
    prefix-sid index 1
   !
@@ -142,17 +195,15 @@ router isis 100
    fast-reroute per-prefix ti-lfa
    fast-reroute per-prefix ti-lfa level 2
    metric 1
-  !       
+  !
  !
 !
 router bgp 65000
  bgp router-id 10.0.0.1
- !
  bgp bestpath as-path multipath-relax
  address-family ipv4 unicast
   additional-paths receive
   maximum-paths ebgp 32
-  !
   network 10.0.0.1/32
  !
  address-family vpnv4 unicast
@@ -161,57 +212,175 @@ router bgp 65000
  address-family ipv6 unicast
   additional-paths receive
   maximum-paths ebgp 32
-  network fc00:0000:1111::1/128
   network fc00:0:101:1::/64
+  network fc00:0:1111::1/128
  !
  address-family vpnv6 unicast
+ !
+ address-family l2vpn evpn
  !
  address-family link-state link-state
  !
  neighbor-group xrd-ipv4-peer
   remote-as 65000
   update-source Loopback0
+  address-family l2vpn evpn
+  !
   address-family link-state link-state
    route-policy drop in
    route-policy pass out
+  !
  !
  neighbor-group xrd-ipv6-peer
   remote-as 65000
   update-source Loopback0
+  address-family vpnv4 unicast
+   next-hop-self
   !
   address-family ipv6 unicast
    next-hop-self
   !
+  address-family vpnv6 unicast
+   next-hop-self
+  !
  !
  neighbor 10.0.0.5
-  description iBGP to xrd05 RR
   use neighbor-group xrd-ipv4-peer
-  !
+  description iBGP to xrd05 RR
  !
  neighbor 10.0.0.6
-  description iBGP to xrd06 RR
   use neighbor-group xrd-ipv4-peer
+  description iBGP to xrd06 RR
+ !
+ neighbor fc00:0:5555::1
+  use neighbor-group xrd-ipv6-peer
+  description iBGPv6 to xrd05 RR
+ !
+ neighbor fc00:0:6666::1
+  use neighbor-group xrd-ipv6-peer
+  description iBGPv6 to xrd06 RR
+ !
+ vrf 1
+  rd 1:1
+  address-family ipv4 unicast
+   redistribute connected
+  !
+  neighbor 10.101.1.8
+   remote-as 65010
+   address-family ipv4 unicast
+    route-policy PASS in
+    route-policy PASS out
+   !
   !
  !
- neighbor fc00:0000:5555::1
-  description iBGPv6 to xrd05 RR
-  use neighbor-group xrd-ipv6-peer
+ vrf carrots
+  rd auto
+  address-family ipv4 unicast
+   segment-routing srv6
+    locator MyLocator
+    alloc mode per-vrf
+   !
+   redistribute connected
+  !
+  address-family ipv6 unicast
+   segment-routing srv6
+    locator MyLocator
+    alloc mode per-vrf
+   !
+   redistribute connected
+  !
  !
- neighbor fc00:0000:6666::1
-  description iBGPv6 to xrd06 RR
-  use neighbor-group xrd-ipv6-peer
+!
+evpn
+ evi 20 segment-routing srv6
+  advertise-mac
+  !
+  locator MyLocator
+ !
+ interface GigabitEthernet0/0/0/3
+  ethernet-segment
+   identifier type 0 11.11.11.11.11.11.11.11.11
+  !
+ !
+ segment-routing srv6
+  locator MyLocator
+ !
+!
+l2vpn
+ bridge group 20
+  bridge-domain 20
+   interface GigabitEthernet0/0/0/3
+   !
+   evi 20 segment-routing srv6
+   !
+  !
  !
 !
 mpls oam
 !
-netconf agent tty
-!
 segment-routing
  global-block 100000 163999
-! 
+ traffic-eng
+  segment-lists
+   srv6
+    sid-format usid-f3216
+   !
+   segment-list xrd567
+    srv6
+     index 10 sid fc00:0:5555::
+     index 20 sid fc00:0:6666::
+    !
+   !
+   segment-list xrd2347
+    srv6
+     index 10 sid fc00:0:2222::
+     index 20 sid fc00:0:3333::
+     index 30 sid fc00:0:4444::
+    !
+   !
+  !
+  policy low-latency
+   srv6
+    locator MyLocator binding-sid dynamic behavior ub6-insert-reduced
+   !
+   color 50 end-point ipv6 fc00:0:7777::1
+   candidate-paths
+    preference 100
+     explicit segment-list xrd567
+     !
+    !
+   !
+  !
+  policy bulk-transfer
+   srv6
+    locator MyLocator binding-sid dynamic behavior ub6-insert-reduced
+   !
+   color 40 end-point ipv6 fc00:0:7777::1
+   candidate-paths
+    preference 100
+     explicit segment-list xrd2347
+     !
+    !
+   !
+  !
+ !
+ srv6
+  encapsulation
+   source-address fc00:0:1111::1
+  !
+  locators
+   locator MyLocator
+    micro-segment behavior unode psp-usd
+    prefix fc00:0:1111::/48
+   !
+  !
+ !
+!
+netconf agent tty
+!
 ssh server rate-limit 600
 ssh server session-limit 100
 ssh server v2
 ssh server vrf default
 ssh server netconf vrf default
-
+end
