--- a/lab_1/config/xrd03.cfg
+++ b/lab_1/config/xrd03.cfg
@@ -1,3 +1,4 @@
+
 hostname xrd03
 username cisco
  group root-lr
@@ -14,7 +15,7 @@ grpc
 !
 telemetry model-driven
  destination-group jalapeno
-  address-family ipv4 198.18.128.101 port 32400
+  address-family ipv4 192.168.112.2 port 32400
    encoding self-describing-gpb
    protocol grpc no-tls
   !
@@ -42,12 +43,12 @@ netconf-yang agent
 !
 interface Loopback0
  ipv4 address 10.0.0.3 255.255.255.255
- ipv6 address fc00:0000:3333::1/128
+ ipv6 address fc00:0:3333::1/128
 !
 interface MgmtEth0/RP0/CPU0/0
  description mgt
  cdp
- ipv4 address 10.254.254.103 255.255.255.0  
+ ipv4 address 10.254.254.103 255.255.255.0
 !
 interface GigabitEthernet0/0/0/0
  description to xrd02
@@ -61,6 +62,12 @@ interface GigabitEthernet0/0/0/1
  ipv4 address 10.1.1.4 255.255.255.254
  ipv6 address 2001:1:1:1::4/127
 !
+interface GigabitEthernet0/0/0/2
+ shutdown
+!
+interface GigabitEthernet0/0/0/3
+ shutdown
+!
 route-policy drop
   drop
 end-policy
@@ -71,8 +78,9 @@ end-policy
 !
 router static
  address-family ipv4 unicast
-  198.18.128.0/21 10.254.254.1
-!  
+  192.168.112.0/24 10.254.254.1
+ !
+!
 router isis 100
  net 49.0901.0000.0000.0003.00
  nsf ietf
@@ -86,10 +94,13 @@ router isis 100
  address-family ipv6 unicast
   metric-style wide
   maximum-paths 32
+  segment-routing srv6
+   locator MyLocator
+   !
   !
  !
  interface Loopback0
-  passive 
+  passive
   address-family ipv4 unicast
    prefix-sid index 3
   !
@@ -126,19 +137,31 @@ router isis 100
    fast-reroute per-prefix ti-lfa
    fast-reroute per-prefix ti-lfa level 2
    metric 1
-  !           
+  !
  !
 !
 mpls oam
 !
-netconf agent tty
-!
 segment-routing
  global-block 100000 163999
-! 
+ srv6
+  encapsulation
+   source-address fc00:0:3333::1
+  !
+  locators
+   locator MyLocator
+    micro-segment behavior unode psp-usd
+    prefix fc00:0:3333::/48
+   !
+  !
+ !
+!
+netconf agent tty
+!
 ssh server rate-limit 600
 ssh server session-limit 100
 ssh server v2
 ssh server vrf default
 ssh server netconf vrf default
+end
 
