--- a/lab_1/config/xrd05.cfg
+++ b/lab_1/config/xrd05.cfg
@@ -1,3 +1,4 @@
+
 hostname xrd05
 username cisco
  group root-lr
@@ -14,7 +15,7 @@ grpc
 !
 telemetry model-driven
  destination-group jalapeno
-  address-family ipv4 198.18.128.101 port 32400
+  address-family ipv4 192.168.112.2 port 32400
    encoding self-describing-gpb
    protocol grpc no-tls
   !
@@ -42,10 +43,10 @@ netconf-yang agent
 !
 interface Loopback0
  ipv4 address 10.0.0.5 255.255.255.255
- ipv6 address fc00:0000:5555::1/128
+ ipv6 address fc00:0:5555::1/128
 !
 interface MgmtEth0/RP0/CPU0/0
- description mgt  
+ description mgt
  ipv4 address 10.254.254.105 255.255.255.0
 !
 interface GigabitEthernet0/0/0/0
@@ -67,9 +68,9 @@ interface GigabitEthernet0/0/0/2
  ipv6 address 2001:1:1:1::14/127
 !
 interface GigabitEthernet0/0/0/3
- description to Internet 
+ description to Internet
  ipv4 address 198.18.1.2 255.255.255.0
- ipv6 address 2001:1:1:1::1A/125
+ ipv6 address 2001:1:1:1::1a/125
  shutdown
 !
 route-policy drop
@@ -82,8 +83,9 @@ end-policy
 !
 router static
  address-family ipv4 unicast
-  198.18.128.0/21 10.254.254.1
-! 
+  192.168.112.0/24 10.254.254.1
+ !
+!
 router isis 100
  net 49.0901.0000.0000.0005.00
  nsf ietf
@@ -97,10 +99,13 @@ router isis 100
  address-family ipv6 unicast
   metric-style wide
   maximum-paths 32
+  segment-routing srv6
+   locator MyLocator
+   !
   !
  !
  interface Loopback0
-  passive 
+  passive
   address-family ipv4 unicast
    prefix-sid index 5
   !
@@ -137,7 +142,7 @@ router isis 100
    fast-reroute per-prefix ti-lfa
    fast-reroute per-prefix ti-lfa level 2
    metric 1
-  !       
+  !
  !
  interface GigabitEthernet0/0/0/2
   circuit-type level-2-only
@@ -153,17 +158,15 @@ router isis 100
    fast-reroute per-prefix ti-lfa
    fast-reroute per-prefix ti-lfa level 2
    metric 1
-  !       
+  !
  !
-! 
+!
 router bgp 65000
  bgp router-id 10.0.0.5
- !
  bgp bestpath as-path multipath-relax
  address-family ipv4 unicast
   additional-paths receive
   maximum-paths ebgp 32
-  !
   network 10.0.0.5/32
   allocate-label all
  !
@@ -173,55 +176,87 @@ router bgp 65000
  address-family ipv6 unicast
   additional-paths receive
   maximum-paths ebgp 32
-  network fc00:0000:5555::1/128
+  network fc00:0:5555::1/128
  !
  address-family vpnv6 unicast
+ !
+ address-family l2vpn evpn
  !
  address-family link-state link-state
  !
  neighbor-group xrd-ipv4-peer
-  update-source Loopback0
   remote-as 65000
+  update-source Loopback0
+  address-family l2vpn evpn
+   route-reflector-client
+  !
   address-family link-state link-state
   !
- ! 
+ !
  neighbor-group xrd-ipv6-peer
-  update-source Loopback0
   remote-as 65000
+  update-source Loopback0
+  address-family vpnv4 unicast
+   route-reflector-client
   !
   address-family ipv6 unicast
    route-reflector-client
   !
+  address-family vpnv6 unicast
+   route-reflector-client
+  !
  !
  neighbor 10.0.0.1
-  description iBGP to r01 client
   use neighbor-group xrd-ipv4-peer
- !
- neighbor fc00:0000:1111::1
   description iBGP to r01 client
-  use neighbor-group xrd-ipv6-peer
-  !
+  bmp-activate server 1
  !
  neighbor 10.0.0.7
-  description iBGP to r07 client
   use neighbor-group xrd-ipv4-peer
- !
- neighbor fc00:0000:7777::1
   description iBGP to r07 client
-  use neighbor-group xrd-ipv6-peer
-  !
+  bmp-activate server 1
  !
+ neighbor fc00:0:1111::1
+  use neighbor-group xrd-ipv6-peer
+  description iBGP to r01 client
+  bmp-activate server 1
+ !
+ neighbor fc00:0:7777::1
+  use neighbor-group xrd-ipv6-peer
+  description iBGP to r07 client
+  bmp-activate server 1
+ !
+!
+bmp server 1
+ host 192.168.112.2 port 30511
+ description jalapeno GoBMP
+ update-source MgmtEth0/RP0/CPU0/0
+ flapping-delay 60
+ initial-delay 5
+ stats-reporting-period 60
+ initial-refresh delay 25 spread 2
 !
 mpls oam
 !
-netconf agent tty
-!
 segment-routing
  global-block 100000 163999
-! 
+ srv6
+  encapsulation
+   source-address fc00:0:5555::1
+  !
+  locators
+   locator MyLocator
+    micro-segment behavior unode psp-usd
+    prefix fc00:0:5555::/48
+   !
+  !
+ !
+!
+netconf agent tty
+!
 ssh server rate-limit 600
 ssh server session-limit 100
 ssh server v2
 ssh server vrf default
 ssh server netconf vrf default
-
+end
