--- a/lab_1/config/xrd07.cfg
+++ b/lab_1/config/xrd07.cfg
@@ -1,3 +1,4 @@
+
 hostname xrd07
 username cisco
  group root-lr
@@ -14,7 +15,7 @@ grpc
 !
 telemetry model-driven
  destination-group jalapeno
-  address-family ipv4 198.18.128.101 port 32400
+  address-family ipv4 192.168.112.2 port 32400
    encoding self-describing-gpb
    protocol grpc no-tls
   !
@@ -32,6 +33,24 @@ telemetry model-driven
   source-interface MgmtEth0/RP0/CPU0/0
  !
 !
+vrf carrots
+ address-family ipv4 unicast
+  import route-target
+   9:9
+  !
+  export route-target
+   9:9
+  !
+ !
+ address-family ipv6 unicast
+  import route-target
+   9:9
+  !
+  export route-target
+   9:9
+  !
+ !
+!
 call-home
  service active
  contact smart-licensing
@@ -46,16 +65,22 @@ netconf-yang agent
 !
 interface Loopback0
  ipv4 address 10.0.0.7 255.255.255.255
- ipv6 address fc00:0000:7777::1/128
+ ipv6 address fc00:0:7777::1/128
 !
 interface MgmtEth0/RP0/CPU0/0
- description mgt  
+ description mgt
  ipv4 address 10.254.254.107 255.255.255.0
 !
 interface GigabitEthernet0/0/0/0
  description to Rome VM
  ipv4 address 10.107.1.2 255.255.255.0
  ipv6 address fc00:0:107:1::2/64
+!
+interface GigabitEthernet0/0/0/0.10
+ vrf carrots
+ ipv4 address 10.107.2.2 255.255.255.0
+ ipv6 address fc00:0:107:2::2/64
+ encapsulation dot1q 10
 !
 interface GigabitEthernet0/0/0/1
  description to xrd04
@@ -70,8 +95,17 @@ interface GigabitEthernet0/0/0/2
  ipv6 address 2001:1:1:1::17/127
 !
 interface GigabitEthernet0/0/0/3
- shutdown
-! 
+ l2transport
+ !
+!
+extcommunity-set opaque low-latency
+  50
+end-set
+!
+extcommunity-set opaque bulk-transfer
+  40
+end-set
+!
 route-policy drop
   drop
 end-policy
@@ -80,19 +114,46 @@ route-policy pass
   pass
 end-policy
 !
+route-policy set-color
+  if destination in (40.0.0.0/24) then
+    set extcommunity color bulk-transfer
+  endif
+  if destination in (50.0.0.0/24) then
+    set extcommunity color low-latency
+  endif
+  if destination in (fc00:0:40::/64) then
+    set extcommunity color bulk-transfer
+  endif
+  if destination in (fc00:0:50::/64) then
+    set extcommunity color low-latency
+  endif
+  pass
+end-policy
+!
 router static
  address-family ipv4 unicast
   20.0.0.0/24 10.107.1.1
   30.0.0.0/24 10.107.1.1
-  198.18.128.0/21 10.254.254.1
+  192.168.112.0/24 10.254.254.1
+ !
+ vrf carrots
+  address-family ipv4 unicast
+   40.0.0.0/24 10.107.2.1
+   50.0.0.0/24 10.107.2.1
+  !
+  address-family ipv6 unicast
+   fc00:0:40::/64 fc00:0:107:2::1
+   fc00:0:50::/64 fc00:0:107:2::1
+  !
+ !
 !
 router isis 100
  net 49.0901.0000.0000.0007.00
- nsf ietf
  distribute link-state level 2
+ nsf ietf
  address-family ipv4 unicast
-  advertise link attributes
   metric-style wide
+  advertise link attributes
   mpls traffic-eng level-2-only
   mpls traffic-eng router-id Loopback0
   maximum-paths 32
@@ -102,10 +163,13 @@ router isis 100
   metric-style wide
   advertise link attributes
   maximum-paths 32
+  segment-routing srv6
+   locator MyLocator
+   !
   !
  !
  interface Loopback0
-  passive 
+  passive
   address-family ipv4 unicast
    prefix-sid index 7
   !
@@ -126,7 +190,7 @@ router isis 100
    fast-reroute per-prefix ti-lfa
    fast-reroute per-prefix ti-lfa level 2
    metric 1
-  !       
+  !
  !
  interface GigabitEthernet0/0/0/2
   circuit-type level-2-only
@@ -142,17 +206,15 @@ router isis 100
    fast-reroute per-prefix ti-lfa
    fast-reroute per-prefix ti-lfa level 2
    metric 1
-  !       
+  !
  !
 !
 router bgp 65000
  bgp router-id 10.0.0.7
- !
  bgp bestpath as-path multipath-relax
  address-family ipv4 unicast
   additional-paths receive
   maximum-paths ebgp 32
-  !
   network 10.0.0.7/32
  !
  address-family vpnv4 unicast
@@ -161,57 +223,122 @@ router bgp 65000
  address-family ipv6 unicast
   additional-paths receive
   maximum-paths ebgp 32
-  network fc00:0000:7777::1/128
   network fc00:0:107:1::/64
+  network fc00:0:7777::1/128
  !
  address-family vpnv6 unicast
+ !
+ address-family l2vpn evpn
  !
  address-family link-state link-state
  !
  neighbor-group xrd-ipv4-peer
   remote-as 65000
   update-source Loopback0
+  address-family l2vpn evpn
+  !
   address-family link-state link-state
    route-policy drop in
    route-policy pass out
+  !
  !
  neighbor-group xrd-ipv6-peer
   remote-as 65000
   update-source Loopback0
+  address-family vpnv4 unicast
+   route-policy set-color out
+   next-hop-self
   !
   address-family ipv6 unicast
    next-hop-self
   !
+  address-family vpnv6 unicast
+   route-policy set-color out
+   next-hop-self
+  !
  !
  neighbor 10.0.0.5
-  description iBGP to xrd05 RR
   use neighbor-group xrd-ipv4-peer
-  !
+  description iBGP to xrd05 RR
  !
  neighbor 10.0.0.6
-  description iBGP to xrd06 RR
   use neighbor-group xrd-ipv4-peer
+  description iBGP to xrd06 RR
+ !
+ neighbor fc00:0:5555::1
+  use neighbor-group xrd-ipv6-peer
+  description iBGPv6 to xrd05 RR
+ !
+ neighbor fc00:0:6666::1
+  use neighbor-group xrd-ipv6-peer
+  description iBGPv6 to xrd06 RR
+ !
+ vrf carrots
+  rd auto
+  address-family ipv4 unicast
+   segment-routing srv6
+    locator MyLocator
+    alloc mode per-vrf
+   !
+   redistribute connected
+   redistribute static
+  !
+  address-family ipv6 unicast
+   segment-routing srv6
+    locator MyLocator
+    alloc mode per-vrf
+   !
+   redistribute connected
+   redistribute static
   !
  !
- neighbor fc00:0000:5555::1
-  description iBGPv6 to xrd05 RR
-  use neighbor-group xrd-ipv6-peer
- !
- neighbor fc00:0000:6666::1
-  description iBGPv6 to xrd06 RR
-  use neighbor-group xrd-ipv6-peer
- !
-! 
-mpls oam
 !
-netconf agent tty
+evpn
+ evi 20 segment-routing srv6
+  advertise-mac
+  !
+  locator MyLocator
+ !
+ interface GigabitEthernet0/0/0/3
+  ethernet-segment
+   identifier type 0 77.77.77.77.77.77.77.77.77
+  !
+ !
+ segment-routing srv6
+  locator MyLocator
+ !
+!
+l2vpn
+ bridge group 20
+  bridge-domain 20
+   interface GigabitEthernet0/0/0/3
+   !
+   evi 20 segment-routing srv6
+   !
+  !
+ !
+!
+mpls oam
 !
 segment-routing
  global-block 100000 163999
-! 
+ srv6
+  encapsulation
+   source-address fc00:0:7777::1
+  !
+  locators
+   locator MyLocator
+    micro-segment behavior unode psp-usd
+    prefix fc00:0:7777::/48
+   !
+  !
+ !
+!
+netconf agent tty
+!
 ssh server rate-limit 600
 ssh server session-limit 100
 ssh server v2
 ssh server vrf default
 ssh server netconf vrf default
-
+end
